--- a/index.html
+++ b/index.html
@@ -1,7 +1,58 @@
 <!DOCTYPE html>
 <html>
-<body>
-  <h1>Hello World</h1>
-  <p>I'm hosted with Github Pages.</p>
+<head>
+  <title>HELLO</title>
+  <style>
+  img {
+    width:100%;
+  }
+  </style>
+</head>
+<body style="background-color:black;">
+  <h1 style="color:white; font-family:consolas;" align = "center"><b>Portfolio</b></h1>
+  <p style="color:white; font-family:consolas;font-size:150%"align = "center">ABOUT</p>
+  <div style="color:lime; font-family:consolas;"align = "center">Kenzie Lim. 17. Male. Ngee Ann Polytechnic. In Diploma in IT.
+    Year 1. Quiet. Weird. Noisy. Overthinker. Dreamer. <br> Aspiring Application Developer. Inspired Game Developer.<br></br>
+  Python. Python + Raspberry Pi. <br><i>In the process... Ruby. HTML+CSS. Javascript.</i><br>Ubuntu. Windows 8, 10. Windows Office. <br>Github. Atom. Eclipse.<br>
+    <img src="noface.png" style="width:200px;height:200px;"></div>
+  <p style="color:white; font-family:consolas;font-size:150%"align = "center">TIMELINE</p>
+  <div style="color:lime; font-family:consolas;"align = "center"><b>-BORN- 2000-</b><br>
+  Born to live to die again.<br></br>
+  <b>-THE CHOICE- 2006-</b><br>
+  A totally unrelated topic. A choice between the Arts - Wushu & Piano.<br></br>
+  <b>-PRIMARY SCHOOL- 2007 - PIONEER PRIMARY SCHOOL-</b><br>
+  I was top in...<br></br>
+  <b>-THE SWITCH (<i>"DSA"</i>)- 2009 - RULANG PRIMARY SCHOOL-</b><br>
+  Wait what?!<br>
+  Anddd...I am last in class now...<br>
+  Well, at least Wushu's going well...<br>
+  Medals & Trophies throughout the years<br>
+  Wushu Vice-Captain<br>
+  Edusave Award x2 <br></br>
+  <b>-SECONDARY SCHOOL- 2013 - JURONG SECONDARY SCHOOL-</b><br>
+  <i>Sports Class--</i><br>
+  The Dawn of Atheletics<br>
+  Triple Double Stream<br>
+  Medals & Trophies throughout the years as well<br>
+  EAGLES award x1 <br>
+  Edusave Award x1 <br>
+  <i>Arts --</i><br>
+  2014 Assignment -<br>
+  Rendition of Famous Paintings (Starry, Starry night)<br>
+  VIP Gift - <br>
+  Guest-of-Honor of Prize-Giving Ceremony 2015<br></br>
+    <img src="noimage.png" style="width:200px;height:200px;"><br>
+  <b>-TERTIARY EDUCATION - 2017(<i>present</i>) Ngee Ann Polytechnic-</b><br>
+  Diploma in IT<br>
+  Python. Operating Systems Fundamentals (<i>Windows and Linux(Ubuntu)</i>). Enterprise Information Systems.<br>
+  Squash. Orion.<br>
+  Stritwise Final Battle 2017.<br></br>
+  <b>-TO THE FUTURE AND BEYOND-</b><br>
+  .<br>.<br>.<br>:)</div>
+  <p style="color:white; font-family:consolas;font-size:150%"align = "center">WORK</p>
+  <div style="color:lime; font-family:consolas;"align = "center"><b>2017 - Tunity Technologies Pte Ltd.</b><br>
+    Helped out with the software for the trays for recently opened <br>Yishun Park Hawker Centre by <i>Timbre</i>.<br>
+    Currently in the process of writing a ruby code...<br>
+    <img src="ruby.png" style="width:200px;height:200px;"></div>
 </body>
 </html>
